# agent-readiness-score

./: .gitignore  AGENTS.md  INSTALL.md  README.md  TESTING.md  action.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_core.py
.beads/: issues.jsonl
.github/workflows/: agent-readiness-check.yml  agent-readiness-examples.yml
action/: README.md  index.js  jest.config.js  package-lock.json  package.json
docs/plans/: 2026-01-24-pillar-1-style-validation-design.md  2026-01-24-pillar-1-style-validation.md  2026-01-24-pillar-2-build-system-design.md  2026-01-24-pillar-2-build-system.md  2026-01-25-pillar-3-testing-design.md  2026-01-25-pillar-3-testing.md  2026-01-26-pillar-4-documentation-design.md  2026-01-26-pillar-5-dev-environment-design.md  2026-01-26-pillar-6-debugging-observability-design.md  2026-01-26-pillar-7-security-design.md  2026-01-26-pillar-8-task-discovery-design.md
skills/AgentReadiness/: README.md  SKILL.md  scan.py
src/agent_readiness/: __init__.py  cli.py  mcp_server.py  models.py  pillar.py  scanner.py
src/agent_readiness/pillars/: __init__.py  build.py  debugging_observability.py  dev_environment.py  documentation.py  security.py  style.py  task_discovery.py  testing.py
tests/: test_clawdbot_skill.py  test_cli.py  test_integration.py
tests/action/: index.test.js
tests/fixtures/dev-env-complete/: .env.example  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  setup.sh
tests/fixtures/dev-env-complete/.devcontainer/: devcontainer.json
tests/fixtures/dev-env-docker/: Dockerfile  README.md  docker-compose.yml
tests/fixtures/dev-env-minimal/: README.md
tests/fixtures/dev-env-node/: README.md  package.json
tests/fixtures/docs-agents-focused/: AGENTS.md
tests/fixtures/docs-complete/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md
tests/fixtures/docs-minimal/: README.md
tests/fixtures/docs-with-examples/: README.md
tests/fixtures/observability-advanced/: otel-config.yaml
tests/fixtures/observability-basic/: README.md  logging.yaml
tests/fixtures/observability-complete/: README.md  app.py  logging.conf  (+1 more)
tests/pillars/: __init__.py  test_build.py  test_debugging_observability.py  test_dev_environment.py  test_documentation.py  test_security.py  test_style.py  test_task_discovery.py  test_testing.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  scanner.ts  statusBar.ts  treeView.ts  types.ts
(+54 files in other folders)
